--- a/.github/ISSUE_TEMPLATE/修正依頼.md
+++ b/.github/ISSUE_TEMPLATE/修正依頼.md
@@ -1,19 +1,21 @@
 ---
 name: 修正依頼
 about: 誤謬、修正の依頼
-title: ''
-labels: ''
-assignees: ''
-
+title: ""
+labels: ""
+assignees: ""
 ---
 
 ## 修正内容についての説明
+
 修正内容についての明確かつ簡潔な説明。
 
 ## 現状の文面
+
 現状どのような文面になっているかの説明。
 
 ## 期待する文面
+
 期待している文面についての詳細な説明。
 
 **追加説明**
