ファイルを整理

--- a/絵文字ライセンステンプレート/絵文字ライセンステンプレート.md
+++ b/絵文字ライセンステンプレート/絵文字ライセンステンプレート.md
@@ -6,29 +6,33 @@
 ## 概要
 
 本ライセンスは`[インスタンス名]`で利用されるカスタム絵文字に関するライセンスを定めるものです。  
-本ライセンスは、当該サーバーにおいて`[インスタンス名]`の管理者および絵文字登録者が設定したカスタム絵文字に関する著作者および利用条件を定めるものです。  
+本ライセンスは、当該サーバーにおいて`[インスタンス名]`の管理者および絵文字登録者が設定したカスタム絵文字に関する著作者および利用条件を定めるものです。
 
 ## 免責事項
 
-Misskey等のサービスにおいて他サーバー、並びに第三者が`[インスタンス名]`で配信された絵文字コンテンツにつき、当サーバー並びに著作者に対して特別の許可を得ないでした絵文字インポートツール等を用いた保存行為、二次配布などにより絵文字を取得した際に生じたいかなる問題について、責任を負いません。
+Misskey 等のサービスにおいて他サーバー、並びに第三者が`[インスタンス名]`で配信された絵文字コンテンツにつき、当サーバー並びに著作者に対して特別の許可を得ないでした絵文字インポートツール等を用いた保存行為、二次配布などにより絵文字を取得した際に生じたいかなる問題について、責任を負いません。
 
 また、記載するライセンスに関しましては、参照日時において有効であるものとします。
 
 ## ライセンス一覧
 
-| 著作者(敬称略)   | 著作者リンク             | ライセンス             | ライセンス参照日 | 補足情報                                         |
-|------------------|--------------------------|-----------------------|------------------|--------------------------------------------------|
-| 著作花子         | [リンク](https://example.tld) | CC2.0                 | 2024年10月1日    | 著作者リンクに記載されている事項に従い利用します。   |
-| 著作太郎         | [リンク](https://example.tld) | 特別許諾               | 2024年9月15日     | 本サーバーでの利用に限定して利用許諾を得ています。   |
-| 著作権信夫       | [リンク](https://example.tld) | Apache License 2.0    | 2024年10月5日    | ライセンスに準拠して利用します。                   |
-| チョサク・ケン   | [リンク](https://example.tld) | CC0                   | 2024年8月20日     | パブリックドメイン                                |
-
+| 著作者(敬称略) | 著作者リンク                  | ライセンス         | ライセンス参照日   | 補足情報                                           |
+| -------------- | ----------------------------- | ------------------ | ------------------ | -------------------------------------------------- |
+| 著作花子       | [リンク](https://example.tld) | CC2.0              | 2024 年 10 月 1 日 | 著作者リンクに記載されている事項に従い利用します。 |
+| 著作太郎       | [リンク](https://example.tld) | 特別許諾           | 2024 年 9 月 15 日 | 本サーバーでの利用に限定して利用許諾を得ています。 |
+| 著作権信夫     | [リンク](https://example.tld) | Apache License 2.0 | 2024 年 10 月 5 日 | ライセンスに準拠して利用します。                   |
+| チョサク・ケン | [リンク](https://example.tld) | CC0                | 2024 年 8 月 20 日 | パブリックドメイン                                 |
 
 ## お問い合わせ
 
-ライセンス内容のご訂正、ご指摘、お問い合わせ、および本ライセンスに関するお問い合わせは、`[インスタンス名]`の管理者までお願いいたします。   
+ライセンス内容のご訂正、ご指摘、お問い合わせ、および本ライセンスに関するお問い合わせは、`[インスタンス名]`の管理者までお願いいたします。  
 連絡先:`[mail@example.tld]`
 
 ## 附則
+
 ライセンス責任者:`[管理者名]`  
 制定日:`[YYYY/MM/DD]`
+
+---
+
+作成日 2024 年 10 月 8 日
