--- a/規約/利用規約テンプレート24年1月.md
+++ b/規約/利用規約テンプレート24年1月.md
@@ -6,17 +6,17 @@
 
 ## 第一条　適用
 
-1項.　本規約はユーザーと管理者との間の本サービスの利用に関わる全ての関係に適用されます。
+1 項.　本規約はユーザーと管理者との間の本サービスの利用に関わる全ての関係に適用されます。
 
-2項.　管理者は本サービスに関し、本規約の他、本サービスを利用するに際しての規則等、各種の定め（以下、個別規定）を設ける場合がございます。これらの個別規定は名称及び内容を問わず本規約の一部を構成するものとします。
+2 項.　管理者は本サービスに関し、本規約の他、本サービスを利用するに際しての規則等、各種の定め（以下、個別規定）を設ける場合がございます。これらの個別規定は名称及び内容を問わず本規約の一部を構成するものとします。
 
-3項.　本規約の規定が前条の個別規定と矛盾する場合、個別規定に特段の定めがない限り個別規定が優先されるものとします。
+3 項.　本規約の規定が前条の個別規定と矛盾する場合、個別規定に特段の定めがない限り個別規定が優先されるものとします。
 
 ## 第二条　利用登録
 
-1項.　本サービスにおいては、登録希望者が本規約に同意し、管理者の定める方法によって利用登録を申請し、管理者が申請を承諾した旨を登録希望者に通知することによって利用登録が完了するものとします。
+1 項.　本サービスにおいては、登録希望者が本規約に同意し、管理者の定める方法によって利用登録を申請し、管理者が申請を承諾した旨を登録希望者に通知することによって利用登録が完了するものとします。
 
-2項.　管理者は利用登録の申請者に以下の事由があると判断した場合に利用登録の申請を承諾しないことがあり、その理由については一切の開示義務を負わないものとします。
+2 項.　管理者は利用登録の申請者に以下の事由があると判断した場合に利用登録の申請を承諾しないことがあり、その理由については一切の開示義務を負わないものとします。
 
 1.　利用登録の申請に関して虚偽の事項を届け出た場合
 
@@ -28,15 +28,15 @@
 
 5.　申請者が未成年者である場合
 
-## 第三条　ユーザーIDおよびパスワードの管理
+## 第三条　ユーザー ID およびパスワードの管理
 
-1項.　ユーザーは自己の責任において本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
+1 項.　ユーザーは自己の責任において本サービスのユーザー ID およびパスワードを適切に管理するものとします。
 
-2項.　ユーザーはいかなる場合にも、ユーザーIDおよびパスワードを第三者に譲渡または貸与し、もしくは第三者と共有することは出来ません。管理者は、ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には、そのユーザーIDを登録したユーザー自身が利用したものと見なします。
+2 項.　ユーザーはいかなる場合にも、ユーザー ID およびパスワードを第三者に譲渡または貸与し、もしくは第三者と共有することは出来ません。管理者は、ユーザー ID とパスワードの組み合わせが登録情報と一致してログインされた場合には、そのユーザー ID を登録したユーザー自身が利用したものと見なします。
 
-3項.　ユーザーIDおよびパスワードが第三者によって使用されたことによって、もしくは自己の過失においてその情報を滅失した際に生じた損害については、管理者は一切の責任を負わないものとします。
+3 項.　ユーザー ID およびパスワードが第三者によって使用されたことによって、もしくは自己の過失においてその情報を滅失した際に生じた損害については、管理者は一切の責任を負わないものとします。
 
-## 第4条　禁止事項
+## 第 4 条　禁止事項
 
 ユーザーは本サービスの利用にあたり以下の行為を禁止します。
 
@@ -50,7 +50,7 @@
 
 5.　他のユーザー、管理者、の法的地位、人格の利益を享受、妨害することを目的とした模倣行為（フェアユースの可否を問いません）、なりすまし行為
 
-6.　他のユーザーに関する個人情報収集または蓄積する行為（ユーザー名やID、発言内容は含みません）
+6.　他のユーザーに関する個人情報収集または蓄積する行為（ユーザー名や ID、発言内容は含みません）
 
 7.　不正アクセス、不正アクセスを試みる行為
 
@@ -92,11 +92,11 @@
 
 14.　未成年者による本サービスの利用
 
-15.　ユーザーによる自治行為（異議申し立てなどは通報、あるいはメール、公式Discordチャンネル等で行ってください。）
+15.　ユーザーによる自治行為（異議申し立てなどは通報、あるいはメール、公式 Discord チャンネル等で行ってください。）
 
-## 第5条　本サービスの提供の停止等
+## 第 5 条　本サービスの提供の停止等
 
-1項.　管理者は以下のいずれかの事由があると判断した場合、ユーザーに事前通知をすることなく本サービスの一部または全部の提供を停止または中断することが出来るものとします。
+1 項.　管理者は以下のいずれかの事由があると判断した場合、ユーザーに事前通知をすることなく本サービスの一部または全部の提供を停止または中断することが出来るものとします。
 
 1.　本サービスのサーバーおよびコンピューターシステムの保守点検または更新を行う場合
 
@@ -106,11 +106,11 @@
 
 4.　その他管理者が本サービスの提供が困難と判断した場合
 
-2項.　管理者は本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても一切の責任を負わないものとします。
+2 項.　管理者は本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても一切の責任を負わないものとします。
 
-## 第6条　利用制限および契約解除（登録抹消）
+## 第 6 条　利用制限および契約解除（登録抹消）
 
-1項.　管理者はユーザーが以下のいずれかに該当する場合には事前の通知なく投稿データ、投稿ファイル、保存データ等を消去し、ユーザーに対して本サービスの全部もしくは一部の利用を制限、またユーザーとしての登録を抹消し契約を終了させることが出来るものとします。
+1 項.　管理者はユーザーが以下のいずれかに該当する場合には事前の通知なく投稿データ、投稿ファイル、保存データ等を消去し、ユーザーに対して本サービスの全部もしくは一部の利用を制限、またユーザーとしての登録を抹消し契約を終了させることが出来るものとします。
 
 1.　本規約のいずれかの条項に違反した場合
 
@@ -118,83 +118,88 @@
 
 3.　管理者からの連絡に対し、一定期間の返答がない場合
 
-4.　本サービスの最終利用から10年が経過した場合
+4.　本サービスの最終利用から 10 年が経過した場合
 
 5.　その他管理者が本サービスの利用を適当でないと判断する場合
 
-2項.　前項各号のいずれかに該当する場合にユーザーは管理者に対する一切の債権の効力を失い、その時点において利用契約は終了したものと見做します。
+2 項.　前項各号のいずれかに該当する場合にユーザーは管理者に対する一切の債権の効力を失い、その時点において利用契約は終了したものと見做します。
 
-3項.　管理者が本条に基づき行った行為によってユーザーに生じた損害について、一切の責任を負いません。
+3 項.　管理者が本条に基づき行った行為によってユーザーに生じた損害について、一切の責任を負いません。
 
-## 第7条　退会
+## 第 7 条　退会
 
-1項.　ユーザーは管理者の定める退会手続きにより本サービスから退会できるものとします。
+1 項.　ユーザーは管理者の定める退会手続きにより本サービスから退会できるものとします。
 
-2項.　退会手続きによりユーザーは管理者との契約を終了し債権債務の関係は消滅します。
+2 項.　退会手続きによりユーザーは管理者との契約を終了し債権債務の関係は消滅します。
 
-## 第8条　著作権
+## 第 8 条　著作権
 
-1項.　ユーザーは自らの著作権などの必要な知的財産権を有するか、または必要な権利者の許諾を得た文章、メディアファイルの情報に関してのみ本サービスで利用、投稿、保存、アップロードを行う事が出来るものとします。
+1 項.　ユーザーは自らの著作権などの必要な知的財産権を有するか、または必要な権利者の許諾を得た文章、メディアファイルの情報に関してのみ本サービスで利用、投稿、保存、アップロードを行う事が出来るものとします。
 
-2項.　ユーザーが本サービスを利用して投稿ないしアップロードした文章、メディアファイル等の著作権は当該ユーザー並びにその他既存の権利者に留保されるものとします。但し管理者は本サービスを利用して投稿ないしアップロードされた文章、メディアファイル等について本サービスの改良、品質向上、不備の是正、管理行為、並びに本サービスの周知宣伝等に必要な範囲で利用できるものとしユーザーはこの利用に関して著作者人格権を行使しないものとします。
+2 項.　ユーザーが本サービスを利用して投稿ないしアップロードした文章、メディアファイル等の著作権は当該ユーザー並びにその他既存の権利者に留保されるものとします。但し管理者は本サービスを利用して投稿ないしアップロードされた文章、メディアファイル等について本サービスの改良、品質向上、不備の是正、管理行為、並びに本サービスの周知宣伝等に必要な範囲で利用できるものとしユーザーはこの利用に関して著作者人格権を行使しないものとします。
 
-3項.　前項本文の定めるものを除き、本サービスおよび準ずるものの情報についての著作権およびその他の知的財産権はすべて管理者または管理者がその利用を許諾した権利者に帰属し、ユーザーは無断で、複製、譲渡、貸与、翻訳、改変、転載、公衆送信、伝送、配布、出版、営業使用等をしてはならないものとします。
+3 項.　前項本文の定めるものを除き、本サービスおよび準ずるものの情報についての著作権およびその他の知的財産権はすべて管理者または管理者がその利用を許諾した権利者に帰属し、ユーザーは無断で、複製、譲渡、貸与、翻訳、改変、転載、公衆送信、伝送、配布、出版、営業使用等をしてはならないものとします。
 
-## 第9条　免責事項
+## 第 9 条　免責事項
 
-1項.
+1 項.
 　管理者は本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、正当性、適合性、合理性、セキュリティの欠陥、バグやエラー、権利侵害等）がない事を明示、黙示的に保証しません。
 
-2項.　管理者は本サービスに起因してユーザーに生じたあらゆる損害につき一切の責任を負いません。
+2 項.　管理者は本サービスに起因してユーザーに生じたあらゆる損害につき一切の責任を負いません。
 
-3項.　管理者は本サービスに関してユーザーと他のユーザーまたは第三者との間で生じた取引、連絡または紛争につき一切の責任を負いません。
+3 項.　管理者は本サービスに関してユーザーと他のユーザーまたは第三者との間で生じた取引、連絡または紛争につき一切の責任を負いません。
 
-## 第10条　サービス内容の変更等
+## 第 10 条　サービス内容の変更等
 
 管理者はユーザーへの事前の告知を持って本サービスの内容を変更、追加または廃止することがあり、ユーザーは退会等契約を終了せず継続して利用した時点でこれに承諾したものと見做します。
 
-## 第11条　利用規約の変更
+## 第 11 条　利用規約の変更
 
-1項.　管理者は以下の場合にはユーザーの個別の同意を必要とせず本規約の変更を行えるものとします。
+1 項.　管理者は以下の場合にはユーザーの個別の同意を必要とせず本規約の変更を行えるものとします。
 
 1.　本規約の変更がユーザーの一般の利益に適合するとき
 
 2.　本規約の変更が本サービス利用契約の目的に反せず、かつ変更の必要性、相当性、その他変更に係る事情に照らして客観的に合理的であるものであるとき
 
-2項.　管理者はユーザーに対し、前項による本規約の変更にあたり事前に本規約を変更する旨および変更後の本規約の内容、効力発生時期を通知します。
+2 項.　管理者はユーザーに対し、前項による本規約の変更にあたり事前に本規約を変更する旨および変更後の本規約の内容、効力発生時期を通知します。
 
-## 第12条　個人情報に関する規定
+## 第 12 条　個人情報に関する規定
 
 管理者は本サービスの利用によって取得する個人情報については、管理者の定めるプライバシーポリシーに従い適切に取り扱うものとします。
 
-## 第13条　通知および連絡
+## 第 13 条　通知および連絡
 
 ユーザーと管理者との間の連絡または通知行為は管理者の定める方法によって行うものとします。管理者はユーザーから別途定める連絡の手段を用いた連絡先の変更届け出がない限り現在登録されている連絡先が有効なものとして当該連絡先へ通知または連絡を行い、連絡ないし通知を発信した時点でユーザーに到達したものと見做します。
 
-## 第14条　権利義務の譲渡、担保制限
+## 第 14 条　権利義務の譲渡、担保制限
 
 ユーザーは管理者に事前の承諾なく契約上の法的地位または本規約に基づく権利もしくは義務を第三者に譲渡し、あるいは担保に供することは出来ません。
 
-## 第15条　サービスの性質上の特約
+## 第 15 条　サービスの性質上の特約
 
-1項.　MisskeyはActivityPubを採用しており、この手段をもってして行われた通信については他のサーバーと共有する形となり、本サービスでコンテンツを消去したとしても他のサーバー上に情報が残存する場合がございます。
+1 項.　 Misskey は ActivityPub を採用しており、この手段をもってして行われた通信については他のサーバーと共有する形となり、本サービスでコンテンツを消去したとしても他のサーバー上に情報が残存する場合がございます。
 
-2項.　他のサーバーに共有された情報に関するトラブルのうち自己のサーバーの範囲外で発生した紛争に関しては管理者は責任を負いません。また、他のサーバーに流れた情報に関する権利については他のサーバーの規約に準用されるものとされます。そのため他のサーバーに共有される可能性があることを承諾したうえで投稿を行って下さい。
+2 項.　他のサーバーに共有された情報に関するトラブルのうち自己のサーバーの範囲外で発生した紛争に関しては管理者は責任を負いません。また、他のサーバーに流れた情報に関する権利については他のサーバーの規約に準用されるものとされます。そのため他のサーバーに共有される可能性があることを承諾したうえで投稿を行って下さい。
 
-## 第16条　準拠法、管轄裁判所
+## 第 16 条　準拠法、管轄裁判所
 
-1項.　本規約の解釈にあたっては日本法を準拠法とします。
+1 項.　本規約の解釈にあたっては日本法を準拠法とします。
 
-2項.　本サービスに関して紛争が発生した場合には管理人の所在地である△△地方裁判所を専属的合意管轄とします。
+2 項.　本サービスに関して紛争が発生した場合には管理人の所在地である △△ 地方裁判所を専属的合意管轄とします。
 
-## 第17条　GDPR　EU法に関する特約
+## 第 17 条　 GDPR 　 EU 法に関する特約
 
-GDPR圏、EU圏に居住する利用者に関しては日本国法の範囲内で権利が保護されるものとし、当該地域の特例に関しては保証されないことを承諾するものとします。
+GDPR 圏、EU 圏に居住する利用者に関しては日本国法の範囲内で権利が保護されるものとし、当該地域の特例に関しては保証されないことを承諾するものとします。
 
 ### 付則
 
 規約制定日
 
-XXXX年XX月XX日　初版発行
+XXXX 年 XX 月 XX 日　初版発行
 
-代表　OOOO　連絡先　(必ず連絡がつく情報を記載)
+代表　 OOOO 　連絡先　(必ず連絡がつく情報を記載)
+
+---
+
+作成日 2024 年 1 月 29 日
+修正 2024 年 3 月 25 日 Threads の要求する要件に対応
