文章の成型

--- a/規約/利用規約テンプレート24年1月.md
+++ b/規約/利用規約テンプレート24年1月.md
@@ -201,5 +201,5 @@ XXXX 年 XX 月 XX 日　初版発行
 
 ---
 
-作成日 2024 年 1 月 29 日
-修正 2024 年 3 月 25 日 Threads の要求する要件に対応
+- 作成日 2024 年 1 月 29 日
+- 修正 2024 年 3 月 25 日 Threads の要求する要件に対応
