--- a/プライバシー・ポリシー/プライバシーテンプレート.md
+++ b/プライバシー・ポリシー/プライバシーテンプレート.md
@@ -124,5 +124,5 @@
 
 ---
 
-作成日 2024 年 1 月 29 日
-修正 2024 年 3 月 25 日 Threads の要求する要件に対応
+- 作成日 2024 年 1 月 29 日
+- 修正 2024 年 3 月 25 日 Threads の要求する要件に対応
