--- a/規約/利用規約テンプレート24年1月.md
+++ b/規約/利用規約テンプレート24年1月.md
@@ -1,8 +1,6 @@
-内容が不完全である可能性も考慮されますのでそのままコピーされるのは推奨されません。自身のサーバー、利用者に即した文書に書き換えていただけると幸いです。
-
 # 利用規約
 
-本利用規約（以下、本規約）は、OOOO（以下、管理者）が本ウェブサイト上に提供するサービス（本サービス）の利用要件を定めるものです。登録者の皆様（以下、ユーザー）には、利用にあたり本規約に同意していただく必要がございます。
+本利用規約（以下、本規約）は、PJWorld（以下、管理者）が本ウェブサイト上に提供するサービス（本サービス）の利用要件を定めるものです。登録者の皆様（以下、ユーザー）には、利用にあたり本規約に同意していただく必要がございます。
 
 ## 第一条　適用
 
@@ -26,7 +24,7 @@
 
 4.　公序良俗に反する、反社会的である、過度な政治的主張、並びに特定の宗教団体の活動を目的として申請した場合
 
-5.　申請者が未成年者である場合
+5.　申請者が保護者に許可を得ていない未成年者である場合
 
 ## 第三条　ユーザー ID およびパスワードの管理
 
@@ -90,7 +88,7 @@
 
 13.　その他管理者が不適切であると客観的に判断しうる行為
 
-14.　未成年者による本サービスの利用
+14.　保護者に許可を得ていない未成年者による本サービスの利用
 
 15.　ユーザーによる自治行為（異議申し立てなどは通報、あるいはメール、公式 Discord チャンネル等で行ってください。）
 
@@ -118,7 +116,7 @@
 
 3.　管理者からの連絡に対し、一定期間の返答がない場合
 
-4.　本サービスの最終利用から 10 年が経過した場合
+4.　本サービスの最終利用から 1 年が経過した場合
 
 5.　その他管理者が本サービスの利用を適当でないと判断する場合
 
@@ -185,7 +183,7 @@
 
 1 項.　本規約の解釈にあたっては日本法を準拠法とします。
 
-2 項.　本サービスに関して紛争が発生した場合には管理人の所在地である △△ 地方裁判所を専属的合意管轄とします。
+2 項.　本サービスに関して紛争が発生した場合には管理人の所在地である裁判所を専属的合意管轄とします。
 
 ## 第 17 条　 GDPR 　 EU 法に関する特約
 
@@ -195,11 +193,9 @@ GDPR 圏、EU 圏に居住する利用者に関しては日本国法の範囲内
 
 規約制定日
 
-XXXX 年 XX 月 XX 日　初版発行
+2025 年 09 月 08 日　初版発行
 
-代表　 OOOO 　連絡先　(必ず連絡がつく情報を記載)
+代表　 ゆんふぃ 　連絡先　misskey@pjsekai.world (必ず連絡がつく情報を記載)
 
 ---
 
-- 作成日 2024 年 1 月 29 日
-- 修正 2024 年 3 月 25 日 Threads の要求する要件に対応
