--- a/プライバシー・ポリシー/プライバシーテンプレート.md
+++ b/プライバシー・ポリシー/プライバシーテンプレート.md
@@ -1,5 +1,3 @@
-内容が不完全である可能性も考慮されますのでそのままコピーされるのは推奨されません。自身のサーバー、利用者に即した文書に書き換えていただけると幸いです。
-
 # プライバシーポリシー
 
 本プライバシーポリシーは利用規約において定められる内容に適用する内容を趣旨とし、規定されるものです。本コンテンツを利用することにつき利用者は当運営の定める本規定に同意したものとみなします。
@@ -114,15 +112,13 @@
 
 本ポリシーに関する問い合わせは下記のアドレスにお願いします。
 
-アドレス hogehoge(必ず連絡が付くアドレスを記載すること)
+アドレス misskey@pjsekai.world 
 
 ### 付則
 
 制定日
 
-202X 年 0X 月 XX 日　初版発行
+2025 年 09 月 08 日　初版発行
 
 ---
 
-- 作成日 2024 年 1 月 29 日
-- 修正 2024 年 3 月 25 日 Threads の要求する要件に対応
